--- a/docker/virtctl/centos7/Dockerfile
+++ b/docker/virtctl/centos7/Dockerfile
@@ -16,7 +16,7 @@ ADD *.cfg /home/kubevmm/core/utils
 
 ADD virtctl /home/kubevmm/core/virtctl
 
-#ADD kubeovn-adm /home/kubevmm/bin/
+ADD kubeovn-adm /home/kubevmm/bin/
 
 ADD kubevmm-adm /home/kubevmm/bin/
 
