--- a/scripts/ansible/playbooks/update_uniVirt.yml
+++ b/scripts/ansible/playbooks/update_uniVirt.yml
@@ -24,9 +24,11 @@
 
     - name: Delete old Kubernetes YAMLs for CentOS7
       command: "kubectl delete -f {{ yaml_directory }}/centos7/virt-tool-centos.yaml"
+      ignore_errors: true
 
     - name: Apply new Kubernetes YAMLs for CentOS7
       command: "kubectl apply -f {{ yaml_directory }}/centos7/virt-tool-centos.yaml"
+      ignore_errors: true
 
     - name: Copy virt-tool-ubuntu.yaml.tmp to virt-tool-ubuntu.yaml
       command: cp -f {{ yaml_directory }}/ubuntu22/virt-tool-ubuntu.yaml.tmp {{ yaml_directory }}/ubuntu22/virt-tool-ubuntu22.yaml
@@ -45,6 +47,8 @@
 
     - name: Delete old Kubernetes YAMLs for Ubuntu22
       command: "kubectl delete -f {{ yaml_directory }}/ubuntu22/virt-tool-ubuntu.yaml"
+      ignore_errors: true
 
     - name: Apply new Kubernetes YAMLs for Ubuntu22
       command: "kubectl apply -f {{ yaml_directory }}/ubuntu22/virt-tool-ubuntu.yaml"
+      ignore_errors: true
