--- a/docker/base/centos7/Dockerfile
+++ b/docker/base/centos7/Dockerfile
@@ -1,14 +1,16 @@
 FROM centos:7.9.2009
 
-RUN yum update -y && yum install -y epel-release ansible
-
-WORKDIR /home
+RUN yum update -y && yum install -y epel-release && yum install -y ansible
 
 RUN mkdir /etc/uniVirt
 
 COPY ansible /etc/uniVirt
 
-RUN /usr/bin/ansible-playbook -i /etc/uniVirt/ansible/inventory.ini /etc/uniVirt/ansible/playbooks/install_packages_and_dependencies.yml
+WORKDIR /ansible
+
+RUN ansible-playbook -i /etc/uniVirt/ansible/inventory.ini /etc/uniVirt/ansible/playbooks/install_packages_and_dependencies.yml
+
+WORKDIR /home
 
 COPY sdsctl-install.sh /home
 
