--- a/docker/base/ubuntu22/Dockerfile
+++ b/docker/base/ubuntu22/Dockerfile
@@ -2,13 +2,15 @@ FROM ubuntu:22.04
 
 RUN apt-get update && apt-get install -y ansible
 
-WORKDIR /home
-
 RUN mkdir /etc/uniVirt
 
 COPY ansible /etc/uniVirt
 
-RUN /usr/bin/ansible-playbook -i /etc/uniVirt/ansible/inventory.ini /etc/uniVirt/ansible/playbooks/install_packages_and_dependencies.yml
+WORKDIR /ansible
+
+RUN ansible-playbook -i /etc/uniVirt/ansible/inventory.ini /etc/uniVirt/ansible/playbooks/install_packages_and_dependencies.yml
+
+WORKDIR /home
 
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" > /etc/timezone
