--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -28,7 +28,7 @@
         create: yes
 
     - name: Reload bashrc to apply changes
-      shell: source "{{ ansible_env.HOME }}/.bashrc"
+      shell: bash --rcfile "{{ ansible_env.HOME }}/.bashrc"
 
     - name: Install Python 3.9.7 using conda
       shell: /opt/anaconda3/bin/conda install -y python=3.9.7
