--- a/scripts/ansible/playbooks/install_packages_and_dependencies.yml
+++ b/scripts/ansible/playbooks/install_packages_and_dependencies.yml
@@ -124,6 +124,7 @@
           - grpcio-tools
           - protobuf
           - psutil
+          - pyinstaller
         state: latest
         executable: pip3
       tags: 
